# NaRAGtive

./: .coveragerc  .gitignore  AUDIT_FINDINGS.md  CURRENT_TUI_STATUS.md  PHASE2_IMPLEMENTATION.md  PHASE3_COMPLETION_CHECKLIST.md  QUICK_START_Phase3.md  README.md  TESTING.md  llama-server-ingester.md  main.py  pyproject.toml
.github/workflows/: tests.yml
docs/: CHAT_INGESTION_GUIDE.md  LABS_APPROVAL_MONITORING.md  LABS_NARAGTIVE_GAP_ANALYSIS_PROMPT.md  LLAMA_SERVER_INGESTION.md  PHASE2_QUICK_START.md  TEXTUAL_API_COMPLIANCE.md  TEXTUAL_LABS_PROMPT.md  TEXTUAL_PHASE2_PROMPT.md  labs-prompt-multi-store.md  multi-store-architecture.md
examples/: ingest_llama_server_example.py
inputs/: local_chat_example.json
naragtive/: __init__.py  bge_reranker_integration.py  ingest_chat_transcripts.py  ingest_llama_server_chat.py  polars_vectorstore.py  reranker_export.py  store_registry.py
naragtive/tui/: __init__.py  app.py  search_utils.py
naragtive/tui/screens/: __init__.py  base.py  dashboard.py  search.py  search_interactive.py  statistics.py  store_manager.py
naragtive/tui/styles/: __init__.py  app.tcss
naragtive/tui/widgets/: __init__.py  dialogs.py  filter_panel.py  result_detail.py  results_table.py  search_history.py  search_input.py  store_form.py  store_list.py
tests/: __init__.py  conftest.py  test_bge_reranker_integration.py  test_ingest_chat_transcripts.py  test_ingest_llama_server_chat.py  test_main_cli.py  test_polars_vectorstore.py  test_reranker_export.py  test_store_registry.py  test_tui_basic.py  test_tui_filtering.py  test_tui_interactive_search.py  test_tui_search.py  test_tui_statistics.py  test_tui_store_manager.py
tui/: TEXTUAL_REFERENCE.md
