[project]
name = "naragtive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "polars>=0.20.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy==2.3.5",
]
[project.optional-dependencies]
chromadb = ["chromadb>=0.3.0"]
dev = ["pytest", "black", "mypy"]
