[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "naragtive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "polars>=0.20.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy==2.3.5",
    "textual>=0.70.0"
]
[project.optional-dependencies]
tui = ["textual>=0.70.0"]
dev = ["pytest", "black", "mypy", "textual-dev>=6.4.0,<7.0"]

[tool.setuptools]
packages = ["naragtive"]
include-package-data = true

[tool.setuptools.package-data]
naragtive = ["tui/styles/*.tcss"]
